# fhir-resources-rs

./: Cargo.toml  README.md
crates/codegen/: Cargo.toml
crates/codegen/src/: main.rs
crates/codegen/src/common/: codegen.rs  mod.rs  type_mapper.rs  writer.rs
crates/codegen/src/r4_generator/: mod.rs  parser.rs  type_mapper.rs  writer.rs
crates/codegen/src/r4b_generator/: mod.rs  parser.rs
crates/codegen/src/r5_generator/: mod.rs  parser.rs
crates/resources/: Cargo.toml
crates/resources/src/: lib.rs
crates/resources/src/r4/: account.rs  activity_definition.rs  adverse_event.rs  allergy_intolerance.rs  appointment.rs  appointment_response.rs  audit_event.rs  basic.rs  binary.rs  biologically_derived_product.rs  body_structure.rs  bundle.rs  capability_statement.rs  care_plan.rs  care_team.rs  catalog_entry.rs  charge_item.rs  charge_item_definition.rs  claim.rs  claim_response.rs  clinical_impression.rs  code_system.rs  communication.rs  communication_request.rs  compartment_definition.rs  composition.rs  concept_map.rs  condition.rs  consent.rs  device.rs  (+120 more)
crates/resources/tests/: integration_tests.rs  r4_resources.rs  r4b_resources.rs  r5_resources.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
docs/: USAGE.md
docs/implementation/r4/: architecture.md  code-generation.md  examples.md  overview.md
docs/implementation/r4b/: overview.md  type-mapping.md
docs/implementation/r5/: architecture.md  code-generation.md  examples.md  overview.md  type-mapping.md
examples/: r5_bundle_typed.rs  r5_patient.rs
src/: lib.rs  patient.rs  resource.rs
(+309 files in other folders)
