[workspace]
members = ["crates/resources", "crates/codegen", "crates/types"]
resolver = "3"

[package]
name = "fhir-resources" # the name of the package
version = "0.1.0"    # the current version, obeying semver
edition = "2024"     # the edition, will have no effect on a resolver used in the workspace

[[bin]]
name = "codegen"
path = "crates/codegen/src/main.rs"
